k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-demo
  labels:
    name: gitops-demo
